<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.formulariologin1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/add_soldado"
        android:name="com.example.formulariologin1.add_soldado"
        android:label="activity_add_soldado"
        tools:layout="@layout/activity_add_soldado" />
    <activity
        android:id="@+id/agregarSoldados"
        android:name="com.example.formulariologin1.ImportSoldados"
        android:label="activity_agregar_soldados"
        tools:layout="@layout/activity_agregar_soldados" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.formulariologin1.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.formulariologin1.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <activity
        android:id="@+id/listar_soldados"
        android:name="com.example.formulariologin1.Listar_soldados"
        android:label="activity_listar_soldados"
        tools:layout="@layout/activity_listar_soldados" />


</navigation>