<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.formulariologin1.add_soldado">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:screenOrientation="portrait"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:screenOrientation="portrait">

                <EditText
                    android:id="@+id/txtCedula"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/cedula"
                    android:inputType="number"
                    android:screenOrientation="portrait" />

            </LinearLayout>

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:screenOrientation="portrait" />

            <EditText
                android:id="@+id/txtApellido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/apellido"
                android:inputType="textPersonName"
                android:screenOrientation="portrait" />




                <EditText
                    android:id="@+id/txtTelefono"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/telefono"
                    android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">



                <Spinner
                    android:id="@+id/spinnerg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="19dp" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="19dp" />

                <Spinner
                    android:id="@+id/spinnerc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="19dp" />
                <Spinner
                    android:id="@+id/spinneru"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="19dp" />
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:screenOrientation="portrait" />
            </LinearLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:screenOrientation="portrait">

                <Button
                    android:id="@+id/btnR"
                    android:layout_width="107dp"
                    android:layout_height="50dp"
                    android:background="@drawable/custon_boton3"
                    android:onClick="regFormu"
                    android:text="Registrar"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnC"
                    android:layout_width="116dp"
                    android:layout_height="50dp"
                    android:background="@drawable/custon_boton5"
                    android:onClick="Actualizar"
                    android:text="Actualizar"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnE"
                    android:layout_width="107dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@drawable/custon_boton1"
                    android:onClick="Eliminar"
                    android:text="Eliminar"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnB"
                    android:layout_width="38dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@mipmap/search1"
                    android:onClick="Buscar"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <Space
                    android:layout_width="73dp"
                    android:layout_height="40dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnRe"
                    android:layout_width="18dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@mipmap/regresar"
                    android:onClick="regresar"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>